syntax = "proto3";
package proto_db_translator; // Adjust as per your project.
import "google/protobuf/timestamp.proto";
import "protobuf-db/proto/database_operations.proto";
option go_package = "/user";



// Message for the Role entity
message Role {
    int32 role_id = 1 [
      (db_annotations.db_column) = "role_id",
      (db_annotations.db_primary_key) = true,
      (db_annotations.db_column_type) = DB_TYPE_INT,
      (db_annotations.db_constraints) = DB_CONSTRAINT_NOT_NULL,
      (db_annotations.db_auto_increment) = true
    ];
  
    string role_name = 2 [
      (db_annotations.db_column) = "role_name",
      (db_annotations.db_column_type) = DB_TYPE_VARCHAR,
      (db_annotations.db_constraints) = DB_CONSTRAINT_NOT_NULL,
      (db_annotations.db_constraints) = DB_CONSTRAINT_UNIQUE,
      (db_annotations.db_character_set) = "utf8mb4",
      (db_annotations.db_collate) = "utf8mb4_general_ci"
    ];
  
    google.protobuf.Timestamp created_at = 3 [
      (db_annotations.db_column) = "created_at",
      (db_annotations.db_column_type) = DB_TYPE_DATETIME,
      (db_annotations.db_constraints) = DB_CONSTRAINT_NOT_NULL,
      (db_annotations.db_default_function) = DB_DEFAULT_FUNCTION_NOW
    ];
  
    google.protobuf.Timestamp updated_at = 4 [
      (db_annotations.db_column) = "updated_at",
      (db_annotations.db_column_type) = DB_TYPE_DATETIME,
      (db_annotations.db_constraints) = DB_CONSTRAINT_NOT_NULL,
      (db_annotations.db_default_function) = DB_DEFAULT_FUNCTION_NOW,
      (db_annotations.db_update_action) = DB_UPDATE_ACTION_CURRENT_TIMESTAMP
    ];
  
    int32 parent_role_id = 5 [
      (db_annotations.db_column) = "parent_role_id",
      (db_annotations.db_column_type) = DB_TYPE_INT,
      (db_annotations.db_foreign_key_table) = "Role",
      (db_annotations.db_foreign_key_column) = "role_id",
      (db_annotations.db_on_delete) = DB_FOREIGN_KEY_ACTION_CASCADE,
      (db_annotations.db_on_update) = DB_FOREIGN_KEY_ACTION_NO_ACTION
    ];
  
    string description = 6 [
      (db_annotations.db_column) = "description",
      (db_annotations.db_column_type) = DB_TYPE_TEXT
    ];
  }
  